--- a/css/index.css
+++ b/css/index.css
@@ -219,6 +219,20 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  width: 30%;
+  padding: 5% 4%;
+  background-color: #5e6164;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 7%;
+}
+.home .walk .walk-text .btn:hover {
+  cursor: pointer;
+  font-family: "Russo One", sans-serif;
+  background-color: #84878b;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
