--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,6 +11,7 @@
         cursor: pointer;
         font-family: "Russo One", sans-serif;
         background-color: lighten(@shuttle-gray, 15%);
+        color: rgb(29, 31, 59);
     }
 }
 .flex-center(@direction, @width) {
