--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
-// Navigation code here
+h1 {
+    font-size: 4rem;
+    text-align: center;
+}
+nav {
+    .flex-center(row, 100%);
+
+    a {
+        font-size: 1.6rem;
+        color: @main-font-color;
+        text-decoration: none;
+        padding: 1% 2%;
+        margin: 0 1%;
+        &:hover {
+            color: black;
+        }
+    }
+}
