--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,13 @@ footer {
 .banner img {
   width: 100%;
 }
+@media (max-width: 500px) {
+  .banner {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
 .home .intro h2 {
   padding: 2%;
 }
