--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,10 @@
     img {
         width: 100%;
     }
+    @media @phone {
+        width: 100%;
+        .nothingouttaborder();
+    }
 }
 
 .home {
