--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,6 +9,10 @@
     @media @phone {
         width: 100%;
         .nothingouttaborder();
+        img {
+            width: 105%;
+            margin-left: -2%;
+        }
     }
 }
 
@@ -27,6 +31,18 @@
         display: flex;
         flex-wrap: wrap;
         width: 100%;
+        @media screen {
+            .blast {
+                width: 92%;
+                .nothingouttaborder();
+            }
+            .sky {
+                display: none;
+            }
+            .launch {
+                display: none;
+            }
+        }
 
         img {
             width: 28%;
