looking to have mobile version finished now too.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@ h1 {
 }
 nav {
     .flex-center(row, 100%);
+    @media @phone {
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
 
     a {
         font-size: 1.6rem;
