--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,12 @@ nav {
   flex-direction: row;
   width: 100%;
 }
+@media (max-width: 500px) {
+  nav {
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+}
 nav a {
   font-size: 1.6rem;
   color: #5e6164;
@@ -235,6 +241,9 @@ footer {
     width: 92%;
     margin: 0;
     padding: 0;
+    margin: 2% 3%;
+    margin-top: 6%;
+    margin-bottom: 6%;
   }
   .home .space-images .sky {
     display: none;
@@ -258,15 +267,32 @@ footer {
 .home .visit-planets p {
   margin-top: 13px;
 }
+@media screen {
+  .home .visit-planets {
+    padding: 4% 2;
+  }
+}
 .home .walk {
-  margin-top: 60px;
+  margin-top: 15%;
   border-top: 1px solid #dee2e6;
   padding: 3.5% 4%;
   display: flex;
   justify-content: center;
 }
+@media screen {
+  .home .walk {
+    margin-top: 4%;
+    flex-direction: column;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 2%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -289,9 +315,24 @@ footer {
   background-color: #84878b;
   color: #1d1f3b;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    border-radius: 3%;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    order: -99;
+    width: 92%;
+    margin: 0;
+    padding: 0;
+    margin: 2% 3% 4%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
