--- a/less/home-page.less
+++ b/less/home-page.less
@@ -33,8 +33,9 @@
         width: 100%;
         @media screen {
             .blast {
-                width: 92%;
-                .nothingouttaborder();
+                .phoneimg();
+                margin-top: 6%;
+                margin-bottom: 6%;
             }
             .sky {
                 display: none;
@@ -62,17 +63,28 @@
         p {
             margin-top: 13px;
         }
+        @media screen {
+            padding: 4% 2;
+        }
     }
 
     .walk {
-        margin-top: 60px;
+        margin-top: 15%;
         border-top: 1px solid @main-border-color;
         padding: 3.5% 4%;
         display: flex;
         justify-content: center;
+        @media screen {
+            margin-top: 4%;
+            flex-direction: column;
+        }
 
         .walk-text {
             width: 50%;
+            @media @phone {
+                width: 100%;
+                margin-top: 2%;
+            }
 
             h3 {
                 margin-bottom: 10px;
@@ -84,12 +96,22 @@
 
             .btn {
                 .butins(30%, 5% 4%, @shuttle-gray, white, 700);
+                @media @phone {
+                    width: 100%;
+                    border-radius: 3%;
+                }
             }
         }
 
         .walk-img {
             width: 46%;
             margin-left: 4%;
+            @media @phone {
+                order: -99;
+                width: 92%;
+                .nothingouttaborder();
+                margin: 2% 3% 4%;
+            }
 
             img {
                 width: 100%;
