--- a/less/home-page.less
+++ b/less/home-page.less
@@ -31,7 +31,7 @@
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-        @media screen {
+        @media @phone {
             .blast {
                 .phoneimg();
                 margin-top: 6%;
@@ -63,18 +63,18 @@
         p {
             margin-top: 13px;
         }
-        @media screen {
+        @media @phone {
             padding: 4% 2;
         }
     }
 
     .walk {
-        margin-top: 15%;
+        margin-top: 10%;
         border-top: 1px solid @main-border-color;
         padding: 3.5% 4%;
         display: flex;
         justify-content: center;
-        @media screen {
+        @media @phone {
             margin-top: 4%;
             flex-direction: column;
         }
