--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,21 +2,27 @@ h1 {
     font-size: 4rem;
     text-align: center;
 }
-nav {
-    .flex-center(row, 100%);
-    @media @phone {
-        margin-top: 2%;
-        margin-bottom: 2%;
-    }
+.navbar {
+    nav {
+        .flex-center(row, 100%);
+        @media @phone {
+            margin-top: 2%;
+            margin-bottom: 2%;
+        }
 
-    a {
-        font-size: 1.6rem;
-        color: @main-font-color;
-        text-decoration: none;
-        padding: 1% 2%;
-        margin: 0 1%;
-        &:hover {
-            color: black;
+        a {
+            font-size: 1.6rem;
+            color: @main-font-color;
+            text-decoration: none;
+            padding: 1% 2%;
+            margin: 0 1%;
+            &:hover {
+                color: black;
+                text-shadow: 3px 3px 7px black;
+            }
+            @media @phone {
+                font-size: 1.3rem;
+            }
         }
     }
 }
