last commit for sprint, final changes all done, we hope.

--- a/less/variables.less
+++ b/less/variables.less
@@ -25,3 +25,11 @@
 
 // Mobile var
 @phone: ~"(max-width: 500px)";
+@keyframes slidein {
+    from {
+        transform: scaleX(0);
+    }
+    to {
+        transform: scaleX(1);
+    }
+}
