--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+@keyframes slidein {
+  from {
+    transform: scaleX(0);
+  }
+  to {
+    transform: scaleX(1);
+  }
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -216,6 +224,7 @@ footer {
 .banner {
   width: 95%;
   margin: 1% 2.5%;
+  animation: ease-in 2s slidein;
 }
 .banner img {
   width: 100%;
