Adjusted the Navigation bar.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation code here
+
+nav {
+    .bChk(blue);
+    div {
+        text-align: center;
+        h1 {
+            font-size: 4.5rem;
+            padding: 1%;
+        }
+    }
+    .links {
+        .bChk(red);
+        width: 30%;
+        margin: 0 auto 1%;
+        font-size: 1.3rem;
+        .flex(space-between, center);
+        a {
+            color: grey;
+            text-decoration: none;
+        }
+    }
+}
