--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,55 @@
 // Mixins Here
+@phone: ~"(max-width: 500px)";
+@media @phone {
+    .nothing();
+}
+@tablet: ~"(max-width: 800px)";
+
+// h1,
+// h2,
+// h3,
+// h5,
+// h4 {
+//     font-family: @heading;
+// }
+// p {
+//     line-height: 1.5rem;
+//     font-family: @font;
+// }
+
+.ani1() {
+    transition: 0.2s ease-in-out;
+    &:hover {
+        cursor: pointer;
+        color: white;
+        background: black;
+        transform: scaleX(1.2);
+        transition: 0.2s ease-in-out;
+        p {
+            transform: scaleX(0.8);
+        }
+    }
+}
+
+.padding {
+    padding: 2% 0;
+}
+.flex(@just, @align) {
+    display: flex;
+    justify-content: @just;
+    align-content: @align;
+}
+.grid() {
+    display: grid;
+}
+.container() {
+    width: 90%;
+    margin: 0 5%;
+}
+.nothing {
+    margin: 0;
+    padding: 0;
+}
+.bChk(@color) {
+    border: 1px solid @color;
+}
