--- a/css/index.css
+++ b/css/index.css
@@ -205,40 +205,61 @@ footer {
   align-items: center;
 }
 .home .intro h2 {
-  padding: 15px;
+  padding: 2%;
 }
 .home .intro p {
-  padding: 0 15px;
+  padding: 0 2%;
 }
 .home .space-images {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 5%;
   width: 100%;
+  padding: 5% 2%;
 }
 .home .space-images img {
-  width: 28%;
-  margin: 20px 2.5%;
+  width: 100%;
   border-radius: 20px;
   height: 100%;
 }
 .home .visit-planets {
-  padding: 15px;
+  padding: 2% 0 5%;
 }
 .home .visit-planets h3 {
-  margin-top: 11px;
+  margin-top: 2%;
 }
 .home .visit-planets p {
-  margin-top: 13px;
+  margin-top: 2.5%;
 }
 .home .walk {
-  margin-top: 60px;
   border-top: 1px solid #dee2e6;
-  padding: 50px 60px;
   display: flex;
   justify-content: center;
+  padding: 5%;
 }
 .home .walk .walk-text {
   width: 50%;
+}
+.home .walk .walk-text button {
+  width: 50%;
+  padding: 4% 0;
+  margin-left: 6%;
+  border: 1px solid grey;
+  border-radius: 6px;
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 3px;
+  background-color: grey;
+  transition: 0.2s ease-in-out;
+}
+.home .walk .walk-text button:hover {
+  cursor: pointer;
+  color: grey;
+  background: white;
+  transform: scalex(3%);
+  transition: 0.2s ease-in-out;
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
