--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,75 +1,78 @@
 // Home Content
 
 .home {
+    .intro {
+        h2 {
+            padding: 2%;
+        }
 
-  .intro {
-
-    h2 {
-      padding: 15px;
+        p {
+            padding: 0 2%;
+        }
     }
 
-    p {
-      padding:0 15px;
-    }
-  
-  }
-
-  .space-images {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-
-    img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
-    }
-  }
-
-  .visit-planets {
-    padding: 15px;
-
-    h3 {
-      margin-top: 11px;
-    }
-
-    p {
-      margin-top: 13px;
-    }
-  }
-
-  .walk {
-    margin-top: 60px;
-    border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
-    display: flex;
-    justify-content: center;
-
-    .walk-text {
-      width: 50%;
-
-      h3 {
-        margin-bottom: 10px;
-      }
-
-      p {
-        margin-bottom: 26px;
-      }
-
-      .btn {
-      }
-    }
-
-    .walk-img {
-      width: 46%;
-      margin-left: 4%;
-      
-      img {
+    .space-images {
+        .grid(repeat(3, 1fr), 1fr, 5%);
         width: 100%;
-        height: auto;
-        border-radius: 10px;
-      }
+        padding: 5% 2%;
+        img {
+            width: 100%;
+            border-radius: 20px;
+            height: 100%;
+        }
     }
-  }
-}// home
+
+    .visit-planets {
+        padding: 2% 0 5%;
+
+        h3 {
+            margin-top: 2%;
+        }
+
+        p {
+            margin-top: 2.5%;
+        }
+    }
+
+    .walk {
+        border-top: 1px solid @main-border-color;
+        display: flex;
+        justify-content: center;
+        padding: 5%;
+
+        .walk-text {
+            width: 50%;
+            button {
+                width: 50%;
+                padding: 4% 0;
+                margin-left: 6%;
+                .bChk(grey);
+                border-radius: 6px;
+                color: white;
+                font-size: 2rem;
+                font-weight: 600;
+                letter-spacing: 3px;
+                background-color: grey;
+                .btnChnge(grey, white, scalex(3%));
+            }
+            h3 {
+                margin-bottom: 10px;
+            }
+
+            p {
+                margin-bottom: 26px;
+            }
+        }
+
+        .walk-img {
+            width: 46%;
+            margin-left: 4%;
+
+            img {
+                width: 100%;
+                height: auto;
+                border-radius: 10px;
+            }
+        }
+    }
+} // home
