--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,17 +17,14 @@
 //     font-family: @font;
 // }
 
-.ani1() {
+.btnChnge(@color, @backColor, @transform) {
     transition: 0.2s ease-in-out;
     &:hover {
         cursor: pointer;
-        color: white;
-        background: black;
-        transform: scaleX(1.2);
+        color: @color;
+        background: @backColor;
+        transform: @transform;
         transition: 0.2s ease-in-out;
-        p {
-            transform: scaleX(0.8);
-        }
     }
 }
 
@@ -39,8 +36,11 @@
     justify-content: @just;
     align-content: @align;
 }
-.grid() {
+.grid(@column, @row, @gap) {
     display: grid;
+    grid-template-columns: @column;
+    grid-template-rows: @row;
+    gap: @gap;
 }
 .container() {
     width: 90%;
