--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,6 +9,12 @@
         p {
             padding: 0 2%;
         }
+        .topBanner {
+            width: 100%;
+            img {
+                width: 100%;
+            }
+        }
     }
 
     .space-images {
