--- a/less/global.less
+++ b/less/global.less
@@ -33,10 +33,17 @@ h3 {
 p {
     font-size: 1.6rem;
     line-height: 1.4;
+    color: darkgrey;
+    @media @phone {
+        font-size: 1.4rem;
+    }
 }
 
 .container {
     max-width: 80%;
     width: 100%;
     margin: 0 auto;
+    @media @phone {
+        max-width: 95%;
+    }
 }
