--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,19 +3,15 @@
 @media @phone {
     .nothing();
 }
-@tablet: ~"(max-width: 800px)";
+.phoneChk() {
+    body {
+        @media @phone {
+            background-color: lightgreen;
+        }
+    }
+}
 
-// h1,
-// h2,
-// h3,
-// h5,
-// h4 {
-//     font-family: @heading;
-// }
-// p {
-//     line-height: 1.5rem;
-//     font-family: @font;
-// }
+@tablet: ~"(max-width: 800px)";
 
 .btnChnge(@color, @backColor, @transform) {
     transition: 0.2s ease-in-out;
