--- a/css/index.css
+++ b/css/index.css
@@ -225,11 +225,6 @@ footer {
   justify-content: center;
   align-items: center;
 }
-@media (max-width: 500px) {
-  body {
-    background-color: lightgreen;
-  }
-}
 .home .intro h2 {
   padding: 2%;
 }
@@ -273,11 +268,6 @@ footer {
 }
 .home .visit-planets p {
   margin-top: 2.5%;
-}
-@media (max-width: 500px) {
-  .home .walk {
-    flex-direction: column-reverse;
-  }
 }
 .home .walk {
   border-top: 1px solid #dee2e6;
@@ -323,4 +313,21 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+  }
+  .home .walk .walk-text {
+    width: 100%;
+  }
+  .home .walk .walk-text button {
+    width: 86%;
+  }
+  .home .walk .walk-img {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    padding: 2% 0;
+  }
 }
