--- a/less/global.less
+++ b/less/global.less
@@ -33,14 +33,23 @@ h3 {
 p {
     font-size: 1.6rem;
     line-height: 1.4;
-    color: darkgrey;
+    color: rgba(0, 0, 0, 0.762);
     @media @phone {
         font-size: 1.4rem;
     }
 }
-
 .container {
-    max-width: 80%;
+    background: linear-gradient(
+        115deg,
+        lightgrey,
+        lightgrey,
+        white,
+        lightgrey,
+        lightgrey,
+        white,
+        lightgrey
+    );
+    max-width: 75%;
     width: 100%;
     margin: 0 auto;
     @media @phone {
